--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "chai-as-promised": "^5.1.0",
     "chai-things": "^0.2.0",
     "coffee-script": "^1.9.3",
-    "mocha": "=2.2.31",
+    "mongo": "=2.2.31",
+    "mocha": "=2.1.0",
     "sinon": "^1.15.4",
     "sinon-chai": "^2.8.0",
     "mocha-mongo": "^1.0.0",
